logs/scan-build-vlc/failures/clang_other_error_m_jeZb.i.stderr.txt
conftest.c:32:26: error: "_REENTRANT must be defined"
#                        error "_REENTRANT must be defined"
                         ^
1 error generated.
